// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`type coercion expressions need to be coerced to required type snapshot 1`] = `
"import * as cdktf from \\"cdktf\\";
/*Provider bindings are generated by running cdktf get.
See https://cdk.tf/provider-generation for more details.*/
import * as aws from \\"./.gen/providers/aws\\";
/*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
You can read more about this at https://cdk.tf/variables*/
const exampleSpotAndFargateName = new cdktf.TerraformVariable(
  this,
  \\"example_spot_and_fargate_name\\",
  {}
);
const privateSubnets = new cdktf.TerraformVariable(this, \\"private_subnets\\", {});
const publicSubnets = new cdktf.TerraformVariable(this, \\"public_subnets\\", {});
const roleArn = new cdktf.TerraformVariable(this, \\"role_arn\\", {});
new aws.eksCluster.EksCluster(this, \\"example_spot_and_fargate_eks_cluster\\", {
  name: exampleSpotAndFargateName.value,
  roleArn: roleArn.value,
  vpcConfig: {
    subnetIds: cdktf.Token.asList(\`\\\\\${concat(\${privateSubnets.value}.*.id, \${publicSubnets.value}.*.id)}\`),
  },
});
"
`;

exports[`type coercion references used in resource for_eachs need to understand how the value is used (in this case as a map) snapshot 1`] = `
"import * as cdktf from \\"cdktf\\";
/*Provider bindings are generated by running cdktf get.
See https://cdk.tf/provider-generation for more details.*/
import * as aws from \\"./.gen/providers/aws\\";
/*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
You can read more about this at https://cdk.tf/variables*/
const iamGroupsUsers = new cdktf.TerraformVariable(
  this,
  \\"iam_groups_users\\",
  {}
);
const awsIamUserGroupMembershipIamUserGroupMembershipUserGroups =
  new aws.iamUserGroupMembership.IamUserGroupMembership(
    this,
    \\"iam_user_group_membership_user_groups\\",
    {
      groups: cdktf.Token.asList('\${each.value[\\"groups\\"]}'),
      user: \\"\${each.key}\\",
    }
  );
/*In most cases loops should be handled in the programming language context and 
not inside of the Terraform context. If you are looping over something external, e.g. a variable or a file input
you should consider using a for loop. If you are looping over something only known to Terraform, e.g. a result of a data source
you need to keep this like it is.*/
awsIamUserGroupMembershipIamUserGroupMembershipUserGroups.addOverride(
  \\"for_each\\",
  iamGroupsUsers.value
);
"
`;

exports[`type coercion references used in resources need to use Token.asString snapshot 1`] = `
"/*Provider bindings are generated by running cdktf get.
See https://cdk.tf/provider-generation for more details.*/
import * as cdktf from \\"cdktf\\";
import * as aws from \\"./.gen/providers/aws\\";
const awsRoute53ZoneExampleAwsRoute53SimpleZone =
  new aws.route53Zone.Route53Zone(this, \\"example_aws_route53_simple_zone\\", {
    name: \\"example.com\\",
  });
new aws.route53Record.Route53Record(this, \\"example_aws_route53_simple_record\\", {
  name: \\"example.com\\",
  records: [\\"example\\"],
  ttl: \\"300\\",
  type: \\"TXT\\",
  zoneId: cdktf.Token.asNumber(awsRoute53ZoneExampleAwsRoute53SimpleZone.zoneId),
});
"
`;

exports[`type coercion variables used in resources need to use stringValue snapshot 1`] = `
"import * as cdktf from \\"cdktf\\";
/*Provider bindings are generated by running cdktf get.
See https://cdk.tf/provider-generation for more details.*/
import * as aws from \\"./.gen/providers/aws\\";
/*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
You can read more about this at https://cdk.tf/variables*/
const zoneId = new cdktf.TerraformVariable(this, \\"zone_id\\", {});
new aws.route53Record.Route53Record(this, \\"example_aws_route53_simple_record\\", {
  name: \\"example.com\\",
  records: [\\"example\\"],
  ttl: \\"300\\",
  type: \\"TXT\\",
  zoneId: zoneId.value,
});
"
`;

exports[`type coercion variables within template string need to use stringValue snapshot 1`] = `
"import * as cdktf from \\"cdktf\\";
/*Provider bindings are generated by running cdktf get.
See https://cdk.tf/provider-generation for more details.*/
import * as aws from \\"./.gen/providers/aws\\";
/*Terraform Variables are not always the best fit for getting inputs in the context of Terraform CDK.
You can read more about this at https://cdk.tf/variables*/
const defaultTags = new cdktf.TerraformVariable(this, \\"default_tags\\", {
  default: [
    {
      project: \\"Learning Live with AWS & HashiCorp\\",
    },
  ],
  description: \\"Map of default tags to apply to resources\\",
});
new aws.eip.Eip(this, \\"nat\\", {
  tags: {
    Name: \`\\\\\${\${defaultTags.project.stringValue}}-nat-eip\`,
  },
  vpc: true,
});
"
`;
